--- a/src/style/_color.scss
+++ b/src/style/_color.scss
@@ -4,12 +4,12 @@
   height: 18px;
   border-radius: 50%;
 
-  &_check{
+  &_check {
     border: 0.4px solid $gray;
   }
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,18 +17,5 @@
     width: 12px;
     height: 12px;
     border-radius: 50%;
-  }
-
-  &_red:after {
-    background-color: red;
-  }
-
-  &_white:after {
-    background-color: white;
-    border: 1px solid $gray;
-  }
-
-  &_black:after {
-    background-color: black;
   }
 }
