--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 @import 'style/goods';
 @import 'style/product';
 @import 'style/color';
+@import 'style/favorite';
 @import 'style/footer';
 @import 'style/footer-category';
 @import 'style/footer-social';
@@ -17,3 +18,4 @@
 @import 'style/footer-copyright';
 @import 'style/footer-development';
 @import 'style/search';
+@import 'style/pagination';
