--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -17,14 +17,13 @@ body {
   font-weight: 400;
 }
 
-
-img, svg {
+img,
+svg {
   display: block;
   max-width: 100%;
   max-height: 100%;
   height: auto;
 }
-
 
 button {
   display: block;
@@ -50,29 +49,25 @@ h1,
 h2,
 h3,
 p,
-figure,
-fieldset {
+figure{
   margin: 0;
 }
 
-/*
-Доступно скрываю элементы
-*/
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
 
 .visually-hidden {
   position: fixed;
   transform: scale(0);
 }
 
+.input-hide {
+  appearance: none;
+}
 
-/*
-Пример контейнера
-
-Если контейнер 1180px по макету,
-то для max-width прибавляем паддинги 30px*2, 
-в итоге 1240px
-Чтобы контент не прижимался к краям экрана
-*/
 
 .container {
   --max-width: 1180px;
